# aether

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .prettierignore  .tool-versions  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.sandbox  LICENSE  README.md  SYSTEM.md  acp-improvements.md  agent-spec.md  astro.config.mjs  cliff.toml  converation.md  dist-workspace.toml  ec.config.mjs  encrypted-chunks-plan.md  inline-agent-settings-plan.md  justfile  mcp.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit-config.yaml  prompt-unification-plan.md  refactor-plan.md  release-plz.toml  release.toml  review.md  rustfmt.toml  spec.md  sweep.timestamp  test_debug.rs  tui-plan.md  (+1 more)
.aether/: Dockerfile  SYSTEM.md  settings.json
.aether-tasks/active/: at-1c2a844d.jsonl  at-1dd02e54.jsonl  at-1de786e5.jsonl  at-1df52efe.jsonl  at-4a54ca57.jsonl  at-4a5f6530.jsonl  at-56b4eb3b.jsonl  at-56c0939c.jsonl  at-9d753649.jsonl  at-b5533cf1.jsonl  at-b9e407ca.jsonl  at-ca98c68a.jsonl  at-cac42c83.jsonl  at-e737f2a0.jsonl
.aether/agents/codebase-explorer/: AGENTS.md
.aether/agents/planner/: AGENTS.md
.aether/skills/: skills
.aether/skills/commit-message/: SKILL.md
.aether/skills/frontend-design/: SKILL.md
.aether/skills/plan/: SKILL.md
.aether/skills/review/: SKILL.md
.aether/skills/rust/: SKILL.md  concurrency.md  tooling.md  type-safety.md
.astro/: content-modules.mjs  data-store.json  settings.json
.claude/: skills
.claude/agents/: linear-task-planner.md  rust-engineer.md  task-implementer.md  task-reviewer.md
.claude/commands/: design-doc.md  do-linear-task.md  generate-pr-description.md  plan-linear-task.md  review-branch.md  run-workflow.md  work-on-next-task.md
.claude/skills/authoring-skills/: SKILL.md
.claude/skills/onboarding/: SKILL.md
.claude/skills/protos/: SKILL.md
.claude/skills/rust/: SKILL.md  builder-pattern.md  error-handling.md  testing-fakes.md  traits.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release-plz.yml  release-sdk.yml  release.yml
aether/: .envrc  CLAUDE.md  README.md
aether/completed-tasks/: 001-integration-tests.md  003-mcp-client-integration.md
aether/src/: app.rs  cli.rs  components.rs  config.rs  main.rs  mcp_config.rs
aether/src/components/: chat.rs  input.rs  tool_call.rs
aether/src/llm/: mod.rs  ollama.rs  openrouter.rs  provider.rs
aether/src/mcp/: client.rs  registry.rs
aether/tests/: llm_provider.rs  mcp_integration.rs  streaming_tests.rs  tool_registry.rs
best-practices/: error-handling.md  middleware.md  streaming-async.md  trait-design.md  type-conversions.md
completed-tasks/: 002-llm-integration.md  004-configuration-loading.md  004-mcp-tool-registry.md  005-chat-functionality.md  006-terminal-ui-framework.md  1-fix-action-pattern-violations.md  2-replace-unwrap-with-proper-error-handling.md  3-refactor-duplicated-provider-initialization.md  5-consolidate-error-handling-libraries.md  7-reduce-excessive-cloning.md
docker/: Dockerfile.sandbox
docs/: mcp-progress-protocol.md
docs/design/: skills-mcp-server.md
public/demos/: any-model.cast  demo.cast  llm-demo.cast
scripts/: changed-packages  plannotator-mcp-adapter  run-check
src/: action.rs  agent.rs  app.rs  cli.rs  config.rs  consts.ts  lib.rs  main.rs  mcp_config.rs  theme.rs  tui.rs  types.rs
src/components/: AsciiPlayer.astro  CallToAction.astro  CodeTabs.astro  FeatureItem.astro  FeatureStep.astro  Hero.astro  PackageCard.astro  PackageGrid.astro  StarlightHead.astro  TerminalDemo.astro  ThemeSwitcher.astro  ToolShowcaseItem.astro  block_layout.rs  chat.rs  chat_virtual.rs  content_block.rs  content_blocks.rs  fps.rs  home.rs  input.rs  mod.rs  tool_call.rs  virtual_scroll.rs
src/config/: mod.rs
src/content/docs/: index.mdx
src/layouts/: Landing.astro
src/llm/: mod.rs  ollama.rs  openrouter.rs  openrouter_types.rs  provider.rs
src/mcp/: client.rs  mod.rs  protocol.rs  registry.rs
src/pages/: index.astro  index.mdx
src/styles/: global.css  starlight.css  themes.css
src/testing/: fake_llm.rs  full_integration.rs  mod.rs  test_integration.rs  tool_registry_integration.rs  transport.rs
src/tools/: mod.rs  registry.rs  summarizer.rs
src/ui/: app.rs  event.rs  mod.rs
src/ui/widgets/: chat.rs  input.rs  mod.rs  tool_call.rs
tasks/: 005-llm-provider-abstraction.md  007-ui-widgets.md  008-main-application-loop.md  009-mcp-server-lifecycle.md  01-setup-foundation.md  02-core-hook-infrastructure.md  02-typescript-types.md  03-action-classes.md  04-block-ui-components.md  05-streaming-support.md  06-testing-infrastructure.md  06-ui-permission-prompt.md  08-hook-testing-infrastructure.md  scrolling.md
tasks/hooks/: 01-hooks.md  03-permission-hook-implementation.md  04-diff-generation-rendering.md  05-hook-manager-registry.md  07-hook-configuration.md
tasks/refactoring/: 10-consolidate-tool-call-result-ui.md  4-remove-dead-code-allowances.md  5-consolidate-error-handling-libraries.md  6-move-pretty-assertions-to-dev-dependencies.md  8-modernize-exit-codes.md  9-fix-input-component-method-visibility.md
tests/: agent_integration.rs  chat_component.rs  chat_performance.rs  chat_virtual_component.rs  conversation_history.rs  ctrl_c_home_test.rs  ctrl_c_quit.rs  home_component.rs  json_argument_fix.rs  llm_provider.rs  mcp_integration.rs  scrolling_buffer_clear_test.rs  scrolling_comprehensive_test.rs  scrolling_fix_test.rs  streaming_tests.rs  tool_registry.rs  tool_truncation.rs  u32_deserialization_fix.rs  utils.rs  virtual_scroll_test.rs
v0/: Cargo.toml
v0/completed-tasks/: 001-project-setup.md  002-configuration-loader.md  003-mcp-protocol-core.md  010-streaming-response-handler.md
v0/src/: lib.rs
v0/src/llm/: mod.rs  ollama.rs  provider.rs
v0/src/mcp/: client.rs  mod.rs  protocol.rs
v0/src/ui/: event.rs  mod.rs
v0/src/ui/widgets/: mod.rs
v0/tasks/: 011-error-handling-display.md  012-integration-testing.md  013-documentation-examples.md
v0/tests/: llm_provider.rs  streaming_tests.rs  tool_registry.rs
(+42 files in other folders)
