[workspace]
resolver = "3"
members = ["packages/aether", "packages/mcp-lexicon", "packages/wisp", "packages/crucible", "packages/aether-acp", "packages/planning-agent"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7.12"
futures = "0.3.31"
async-stream = "0.3"

# Serialization
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"

# MCP and API clients
rmcp = { version = "0.12.0", features = ["client", "server", "macros", "schemars", "auth"] }
async-openai = { version = "0.29", features = ["byot"] }
reqwest = { version = "0.12", features = ["json"] }

# Schema and validation
schemars = { version = "1.0", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
regex = "1.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Error handling
color-eyre = "0.6.3"
thiserror = "2.0"

# File system and pattern matching
glob = "0.3"
globset = "0.4"
grep = "0.3.2"
ignore = "0.4"

# Terminal UI
crossterm = { version = "0.29", features = ["event-stream"] }
owo-colors = "4.0"

# Testing
tempfile = "3.0"
async-trait = "0.1"
