[workspace]
resolver = "3"
members = [
    "packages/aether",
    "packages/wisp",
    "packages/crucible",
    "packages/aether-acp",
    "packages/agent-events",
    "packages/planning-agent",
    "packages/aether-lspd",
    "packages/llm",
    "packages/mcp-utils",
    "packages/mcp-coding",
    "packages/mcp-skills",
    "packages/mcp-tasks",
    "packages/mcp-subagents"
]

[workspace.dependencies]
# Async runtime
tokio = { version = "^1.49.0", features = ["full"] }
tokio-stream = { version = "^0.1.18", features = ["io-util"] }
tokio-util = "^0.7.18"
futures = "^0.3.31"
async-stream = "^0.3.6"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"

# MCP and API clients
rmcp = { version = "^0.15.0", features = ["client", "server", "macros", "schemars", "auth"] }
async-openai = { version = "^0.32.4", features = ["byot", "chat-completion"] }
reqwest = { version = "^0.12.28", features = ["json"] }

# LSP types - shared across packages
lsp-types = "0.97"

# Schema and validation
schemars = { version = "^1.2.1", features = ["derive"] }

# Utilities
chrono = { version = "^0.4.43", features = ["serde"] }
uuid = { version = "1.21", features = ["v4"] }
regex = "^1.12.3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"

# Error handling
color-eyre = "0.6.5"
thiserror = "2.0"

# Unix-specific
nix = { version = "0.31", default-features = false }
libc = "0.2"

# File system and pattern matching
glob = "0.3"
globset = "0.4"
grep = "0.4.1"
ignore = "0.4"

# Terminal UI
crossterm = { version = "0.29", features = ["event-stream"] }
owo-colors = "4.2"

# Testing
tempfile = "3.25"
async-trait = "0.1"
