[workspace]
resolver = "3"
members = [
    "packages/aether-core",
    "packages/aether-project",
    "packages/wisp",
    "packages/crucible",
    "packages/aether-cli",
    "packages/acp-utils",
    "packages/aether-lspd",
    "packages/llm",
    "packages/llm-codegen",
    "packages/mcp-utils",
    "packages/mcp-servers",
    "packages/utils",
    "packages/tui",
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
pub_underscore_fields = "allow"
absolute_paths = "warn"

[workspace.dependencies]
# AWS SDK
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.130.0"
aws-smithy-types = "1.4.7"

# Async runtime
tokio = { version = "^1.52.1", features = ["full"] }
tokio-stream = { version = "^0.1.18", features = ["io-util"] }
tokio-util = "^0.7.18"
futures = "^0.3.32"
async-stream = "^0.3.6"
eventsource-stream = "^0.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ACP
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"

# MCP and API clients
rmcp = { version = "^1.5.0", features = ["client", "server", "macros", "schemars", "auth", "elicitation", "transport-io"] }
async-openai = { version = "^0.36.1", features = ["byot", "chat-completion", "responses"] }
reqwest = { version = "^0.13.3", default-features = false, features = ["json", "query", "rustls", "http2", "stream"] }
oauth2 = "5.0"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
url = "2.5"
axum = "0.8.9"
tower = "0.5.3"
tower-http = "0.6.8"

# LSP types - shared across packages
lsp-types = "0.97"

# Schema and validation
schemars = { version = "^1.2.1", features = ["derive"] }

# Utilities
chrono = { version = "^0.4.44", features = ["serde"] }
uuid = { version = "1.23", features = ["v4"] }
regex = "^1.12.3"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
dirs = "6.0"
serde_yml = "0.0.12"
htmd = "0.5"
dom_smoothie = "0.17"

# Error handling
thiserror = "2.0"

# Unix-specific
nix = { version = "0.31", default-features = false }
libc = "0.2"

# File system and pattern matching
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
glob = "0.3"
globset = "0.4"
grep = "0.4.1"
ignore = "0.4"

# Terminal UI
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = "0.13"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-fancy"] }
nucleo = "0.5.0"
mime_guess = "2"
similar = "3.1.0"
unicode-width = "0.2.2"

# Testing
tempfile = "3.27"
async-trait = "0.1"

[profile.dist]
inherits = "release"
lto = "thin"
