[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
async-openai = "0.29"
async-stream = "0.3"
async-trait = "0.1"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
chrono = "0.4"
thiserror = "1.0"
crossterm = "0.29"
rmcp = { version = "0.3.0", features = ["client", "transport-streamable-http-client", "reqwest"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.12"
